tests/int/snapshots/r#mod__int__use_command__module_module_flags_t_e_d_1.snap
---
source: tests/int/use_command.rs
info:
  program: crawk
  args:
    - use
    - module
    - "-t"
    - "-e"
    - "-d"
    - "1"
---
success: true
exit_code: 0
----- stdout -----
crate::constants::DEFAULT_SRC_DIR
crate::constants::MODULE_FILE_NAME
crate::constants::MODULE_NAME_TEST
crate::constants::MODULE_NAME_TESTS
crate::constants::PATH_QUALIFIER_CRATE
crate::constants::PATH_QUALIFIER_SELF
crate::constants::PATH_QUALIFIER_SUPER
super::path::GroupItem
super::path::PathPrefix
super::path::PathSuffix
super::path::TypeReference

----- stderr -----
