tests/int/snapshots/r#mod__int__use_command__module_version_flags_r.snap
---
source: tests/int/use_command.rs
info:
  program: crawk
  args:
    - use
    - version
    - "-r"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
